# adiosBenchmark

adios/: CMakeLists.txt  reader.cpp  sb_gather_fs.sh  sb_prod_cons.sh  sb_scatter_fs.sh  writer.cpp
mpi/: reader.cpp  reader_seek.cpp  sb_gather_fs.sh  sb_prod_cons_fs.sh  sb_scatter_seek_fs.sh  writer.cpp
